tests/snapshots/examples_fixtures/type_system__failing__123_array_missing_close_bracket.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/123_array_missing_close_bracket.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Delimiter

Expected `]` to close array literal.

  examples/type_system/failing/123_array_missing_close_bracket.flx:21:1
   |
21 | let after = 3
   | ^^^

Hint:
  Array literals use `[| ... |]` and must end with `]`.
== stdout ==
<not executed>
